AWS S3 Bucket setup, Image upload to S3 Bucket feature, Update image from S3 bucket and delete from bucket, DB updated